Tue Jun 26 02:20:50 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Fix randomly indented line.

Tue Jun 26 02:20:01 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/document.h: Change parameter name for
	  Document::get_value() to match other parameter names in the class.

Tue Jun 26 02:19:16 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: FLAG_AUTO_MULTIWORD_SYNONYMS now
	  implies FLAG_AUTO_SYNONYMS.

Tue Jun 26 02:18:02 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test for a single word synonym in
	  multi-synonym mode.

Tue Jun 26 02:08:47 BST 2007  Olly Betts <olly@survex.com>

	* common/ortermlist.h,queryparser/termgenerator_internal.h: Fix
	  warnings from Intel's C++ compiler.

Tue Jun 26 01:45:09 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Snapshots and releases are now bootstrapped with libtool
	  1.5.24, which includes all the patches we were applying on top of
	  1.5.22.
	* HACKING: Expand note about preferring pre-increment to
	  post-increment to mention preferring it to adding one, and to cover
	  decrementing too.

Tue Jun 26 01:34:41 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.cc: Fix bug appending spelling data to
	  an existing trigram.

Tue Jun 26 01:34:07 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Fix handling of exceptions during
	  commit.

Mon Jun 25 17:01:40 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Update for Unicode spelling correction.

Mon Jun 25 15:41:43 BST 2007  Olly Betts <olly@survex.com>

	* api/editdistance.cc,api/editdistance.h,api/omdatabase.cc:
	  Convert to UTF-32 before calculating edit distances.
	* tests/api_wrdb.cc: Add test coverage for Unicode spelling
	  correction.

Mon Jun 25 14:03:34 BST 2007  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Remove tests for removed method
	  QuartzPostList::get_collection_freq().
